OAK-11063: address code review comments